--- a/AceJobAgencySecurity/appsettings.json
+++ b/AceJobAgencySecurity/appsettings.json
@@ -12,5 +12,8 @@
     "ReCaptcha": {
         "SiteKey": "6Lco89IqAAAAAA_oodhyL3xpIzTwRYNTcDU6x10A",
         "SecretKey": "6Lco89IqAAAAAEkroXBu97MEJq3l7NCvXNl1xShB"
+    },
+    "PasswordPolicy": {
+        "MaxPasswordAgeInDays": 90
     }
 }
